# blast-radius-agent

./: .env.example  .gitignore  AGENTS.md  CLAIMS-AUDIT.md  LICENSE  README.md  agent.yml  pyproject.toml  submit.html
.github/workflows/: ci.yml  smoke-test.yml  validate.yml
blast_radius/: __init__.py  cli.py  config.py  engine.py  orbit_client.py  report.py  risk.py
demo/: demo_script.md  demo_terminal.html
docs/: ARCHITECTURE.md  ORBIT_CONTRACT.md  SUBMISSION.md
scripts/: validate_skill.py
skills/blast-radius/: SKILL.md
tests/: test_cli.py  test_engine.py  test_orbit_sql.py  test_risk.py
tests/fixtures/: sample_graph.json
