[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blast-radius-agent"
version = "0.1.0"
description = "Trace cross-file dependency blast radius with GitLab Orbit, before you break things."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tcconnally" }]
keywords = ["gitlab", "orbit", "dependency-graph", "blast-radius", "static-analysis"]

# Intentionally zero runtime dependencies: the engine wraps the Orbit CLI and
# uses only the Python standard library so it runs anywhere.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
blast-radius = "blast_radius.cli:main"

[project.urls]
Homepage = "https://github.com/tcconnally/blast-radius-agent"

[tool.setuptools]
packages = ["blast_radius"]

[tool.pytest.ini_options]
testpaths = ["tests"]
